# runtime

eng/native/: configurecompiler.cmake
src/coreclr/md/compiler/: CMakeLists.txt
src/coreclr/md/runtime/: CMakeLists.txt
src/coreclr/nativeresources/: CMakeLists.txt
src/coreclr/pal/inc/: pal.h
src/coreclr/pal/src/: CMakeLists.txt
src/coreclr/pal/src/safecrt/: safecrt_input_s.cpp  safecrt_winput_s.cpp
src/coreclr/vm/: interpreter.cpp
src/mono/dlls/mscordbi/: CMakeLists.txt  clrdefinitions.cmake  cordb-assembly.cpp  cordb-breakpoint.cpp  cordb-eval.cpp  cordb-frame.cpp  cordb-process.cpp  cordb-thread.cpp  cordb-type.cpp  cordb-value.cpp  cordb-value.h  cordb.cpp  cordb.h
src/mono/dlls/mscordbi/socket-dbi/: socket.cpp
src/mono/mono/component/: debugger-agent.c  debugger-agent.h  debugger-engine.h  debugger-protocol.h
